# Motion-Proj

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.lock.txt
configs/: default.yaml
docs/: ARTIFACT_RETENTION.md  AUTORESEARCH_EXPERIMENT_PLAN.md  AUTORESEARCH_LITERATURE_MATRIX.md  AUTORESEARCH_PHASE2_PREREGISTRATION.md  AUTORESEARCH_PHASE2_REPORT.md  AUTORESEARCH_RETROSPECTIVE_2026-07.md  AUTORESEARCH_ROUTE_DECISION.md  BACKBONE_MIGRATION_AUDIT.md  C1_V6_FINAL_REPORT.md  CVPR2027_PLAN.md  ENVIRONMENT.md  EXPERIMENTS.md  MACHINE_MIGRATION.md  MOTION_RESIM_C1_AUTORESEARCH_PLAN_V6.md  MOTION_ROUTE_PIVOT_AUTORESEARCH_PLAN_V5.md  N0_ASSET_AND_EVENT_PREFLIGHT.md  N1_MINI_EVENT_POOL_REPORT.md  OCCGS_COUNTERFACTUAL_PROTOCOL.md  OCCGS_DATA_PREPARATION.md  OCCGS_FINAL_REPORT.md  OCCGS_L0_COMPLETION.md  OCCGS_LICENSE_AND_DATA_POLICY.md  OCCGS_OCCUPANCY_STATE.md  OCCGS_RECONSTRUCTION_BASELINE.md  OCCGS_RESIM_AUTORESEARCH_PLAN_V7.1.md  OCCGS_RESIM_AUTORESEARCH_PLAN_V7.md  PA1_BRANCH_HUMAN_REVIEW_PROMPT.md  PA2_PAIR_HUMAN_REVIEW_PROMPT.md  PHYSICS_DPO_AUTORESEARCH_PLAN_V2_AC_REVISED.md  PHYSICS_DPO_AUTORESEARCH_PLAN_V4_AC_REVISED.md  PHYSICS_DPO_PA0_REVIEW_SPLIT_SCHEMA.md  PHYSICS_DPO_PA1_BRANCH_PROTOCOL.md  POST_OCCGS_RESEARCH_DIRECTIONS.md  PROJECTION_INSPECTION.md  README.md  RESEARCH_FAILURES.md  RESEARCH_STATUS.md  ROUTE_PIVOT_LITERATURE_MATRIX.md  ROUTE_PIVOT_NATURAL_ROLLOUT_AUDIT.md  ROUTE_PIVOT_REAL_MOTION_TARGET_AUDIT.md  (+2 more)
motion_proj/: __init__.py  config.py
occupancy/: __init__.py  build_scene_occupancy.py  o0_sanity_vis.py
resim/: c0_legality_panel.py  (+26 more)
(+378 files in other folders)
